syntax = "proto3";
package yaps.app;

message Empty {}

service AppService {
    rpc ListApps (Empty) returns (stream AppListResponse) {};
    rpc CreateApp (App) returns (Response) {};
    rpc GetApp (AppRef) returns (App) {};
    rpc UpdateApp (App) returns (Response) {};
    rpc DeleteApp (AppRef) returns (Response) {};
}

message AppRef {
    string value = 1;
}

message App {
    int32 ref = 1;
    string name = 2;
    string description = 3;
}

message AppListResponse {
    App app = 1;
}

message Response {
    int32 code = 1;
    string result = 0;
}
